# webrtc-android-gradle

./: .gitignore  README.md  build.gradle  gradle.properties  settings.gradle
AppRTCMobile/: .gitignore  build.gradle
gradle/wrapper/: gradle-wrapper.properties
webrtc/: .gitignore  CMakeLists.txt  build.gradle  build_project.bat  build_webrtc_arm64.bat  clean_project.bat  webrtc.gradle
webrtc/src/main/: AndroidManifest.xml
webrtc/src/main/java/com/piasy/avconf/: AudioMixer.java  HijackCapturerObserver.java
